--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/c5f7dd9af0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <title>World Cup</title>
 </head>
 <body>
-    
+    <header class="container">
+            <section class="first-section">
+<div class="titel"><h1>The Greatest
+    show on the
+    earth</h1>
+    <div class="small-text">
+        <p>World Cup, formally FIFA World Cup, in football (soccer), quadrennial tournament of men's national teams that determines
+        the sport's world champion. It is likely the most popular sporting event in the world, drawing billions of television
+        viewers every tournament.</p>
+    </div>
+     <div class="button">
+        <button>
+            <a href="#"><p>Watch live <i class="fa-solid fa-angle-right"></i></p></a>
+        </button>
+     </div>
+    </div>
+
+    <!-- Image fir first section -->
+
+     <div class="img-banner"><img src="assets/Banner Image.png" alt=""></div>  
+        </section> 
+    </header>
+<main>
+    <div class="section2">
+        <div class="manu">
+            <div class="manu-section"><a href="upcomming/upcomming.html">Upcoming Match</a></div>
+            <div class="manu-section"><a href="#">All Group</a></div>
+            <div class="manu-section color"><a href="#">Blog</a></div>
+        </div>
+.
+    </div>
+</main>
+
+
 </body>
 </html>
