--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,40 +9,249 @@
     <link rel="stylesheet" href="style.css">
     <title>World Cup</title>
 </head>
+
 <body>
     <header class="container">
-            <section class="first-section">
-<div class="titel"><h1>The Greatest
-    show on the
-    earth</h1>
-    <div class="small-text">
-        <p>World Cup, formally FIFA World Cup, in football (soccer), quadrennial tournament of men's national teams that determines
-        the sport's world champion. It is likely the most popular sporting event in the world, drawing billions of television
-        viewers every tournament.</p>
-    </div>
-     <div class="button">
-        <button>
-            <a href="#"><p>Watch live <i class="fa-solid fa-angle-right"></i></p></a>
-        </button>
-     </div>
-    </div>
+        <section class="first-section">
+            <div class="titel">
+                <h1>The Greatest
+                    show on the
+                    earth</h1>
+                <div class="small-text">
+                    <p>World Cup, formally FIFA World Cup, in football (soccer), quadrennial tournament of men's
+                        national teams that determines
+                        the sport's world champion. It is likely the most popular sporting event in the world, drawing
+                        billions of television
+                        viewers every tournament.</p>
+                </div>
+                <div class="button">
+                    <button>
+                        <a href="#">
+                            <p>Watch live <i class="fa-solid fa-angle-right"></i></p>
+                        </a>
+                    </button>
+                </div>
+            </div>
 
-    <!-- Image fir first section -->
+            <!-- Image fir first section -->
 
-     <div class="img-banner"><img src="assets/Banner Image.png" alt=""></div>  
-        </section> 
+            <div class="img-banner"><img src="assets/Banner Image.png" alt=""></div>
+        </section>
     </header>
-<main>
-    <div class="section2">
-        <div class="manu">
-            <div class="manu-section"><a href="upcomming/upcomming.html">Upcoming Match</a></div>
-            <div class="manu-section"><a href="#">All Group</a></div>
-            <div class="manu-section color"><a href="#">Blog</a></div>
+    <main>
+        <div class="section2">
+            <div class="manu">
+                <div class="manu-section"><a href="upcomming/upcomming.html">Upcoming Match</a></div>
+                <div class="manu-section"><a href="#">All Group</a></div>
+                <div class="manu-section color"><a href="#">Blog</a></div>
+            </div>
+
+            <div class="Transfer">
+                <div class="transfer-part">
+                    <div class="transfer-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="ban-titel">
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                        </div>
+                        <p class="transfer-button"> <a href="#">Transfer</a></p>
+                        <div class="transfer-info">
+                            <div class="transfer-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                1:22 hr
+                            </div>
+                            <div class="transfer-comment">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                4
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-part">
+                    <div class="transfer-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="ban-titel">
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                        </div>
+                        <p class="transfer-button"> <a href="#">Transfer</a></p>
+                        <div class="transfer-info">
+                            <div class="transfer-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                1:22 hr
+                            </div>
+                            <div class="transfer-comment">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                4
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-part">
+                    <div class="transfer-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="ban-titel">
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                        </div>
+                        <p class="transfer-button"> <a href="#">Transfer</a></p>
+                        <div class="transfer-info">
+                            <div class="transfer-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                1:22 hr
+                            </div>
+                            <div class="transfer-comment">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                4
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-part">
+                    <div class="transfer-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="ban-titel">
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                        </div>
+                        <p class="transfer-button"> <a href="#">Transfer</a></p>
+                        <div class="transfer-info">
+                            <div class="transfer-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                1:22 hr
+                            </div>
+                            <div class="transfer-comment">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                4
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-part">
+                    <div class="transfer-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="ban-titel">
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                        </div>
+                        <p class="transfer-button"> <a href="#">Transfer</a></p>
+                        <div class="transfer-info">
+                            <div class="transfer-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                1:22 hr
+                            </div>
+                            <div class="transfer-comment">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                4
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-part">
+                    <div class="transfer-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="ban-titel">
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                        </div>
+                        <p class="transfer-button"> <a href="#">Transfer</a></p>
+                        <div class="transfer-info">
+                            <div class="transfer-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                1:22 hr
+                            </div>
+                            <div class="transfer-comment">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                4
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-part">
+                    <div class="transfer-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="ban-titel">
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                        </div>
+                        <p class="transfer-button"> <a href="#">Transfer</a></p>
+                        <div class="transfer-info">
+                            <div class="transfer-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                1:22 hr
+                            </div>
+                            <div class="transfer-comment">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                4
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-part">
+                    <div class="transfer-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="ban-titel">
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                        </div>
+                        <p class="transfer-button"> <a href="#">Transfer</a></p>
+                        <div class="transfer-info">
+                            <div class="transfer-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                1:22 hr
+                            </div>
+                            <div class="transfer-comment">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                4
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="transfer-part">
+                    <div class="transfer-banner">
+                        <img src="assets/Blog Image.png" alt="">
+                        <div class="ban-titel">
+                            <h3>Transfer Live: Chlesea in talks
+                                over Kimpenbe transfer</h3>
+                        </div>
+                        <p class="transfer-button"> <a href="#">Transfer</a></p>
+                        <div class="transfer-info">
+                            <div class="transfer-duration">
+                                <i class="fa-solid fa-clock"></i>
+                                1:22 hr
+                            </div>
+                            <div class="transfer-comment">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                4
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
-.
-    </div>
-</main>
 
 
+
+        </section>
+    </main>
 </body>
+
+</html>
+</div>
+</main>
+</body>
+<footer>
+    <h1>hasan maira bap</h1>
+</footer>
+
 </html>
