--- a/upcomming/upcomming.html
+++ b/upcomming/upcomming.html
@@ -18,14 +18,13 @@
                     <h1>The Greatest
                         show on the
                         earth</h1>
-                    <div class="small-text">
-                        <p>World Cup, formally FIFA World Cup, in football (soccer), quadrennial tournament of men's
+                        <p  class="small-text">World Cup, formally FIFA World Cup, in football (soccer), quadrennial tournament of men's
                             national teams that determines
                             the sport's world champion. It is likely the most popular sporting event in the world,
                             drawing
                             billions of television
                             viewers every tournament.</p>
-                    </div>
+                  
                     <div class="button">
                         <button>
                             <a href="#">
