--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
                     <h1>The Greatest
                         show on the
                         earth</h1>
-                        <p class="small-text">World Cup, formally FIFA World Cup, in football (soccer), quadrennial tournament of men's
+                        <p class="small-text" title="World Cup, formally FIFA World Cup, in football (soccer), quadrennial tournament of men's
+                            national teams that determines
+                            the sport's world champion. It is likely the most popular sporting event in the world, drawing
+                            billions of television
+                            viewers every tournament.">World Cup, formally FIFA World Cup, in football (soccer), quadrennial tournament of men's
                             national teams that determines
                             the sport's world champion. It is likely the most popular sporting event in the world, drawing
                             billions of television
