--- a/upcomming/upcomming.html
+++ b/upcomming/upcomming.html
@@ -18,13 +18,14 @@
                     <h1>The Greatest
                         show on the
                         earth</h1>
-                        <p  class="small-text">World Cup, formally FIFA World Cup, in football (soccer), quadrennial tournament of men's
-                            national teams that determines
-                            the sport's world champion. It is likely the most popular sporting event in the world,
-                            drawing
-                            billions of television
-                            viewers every tournament.</p>
-                  
+                    <p class="small-text">World Cup, formally FIFA World Cup, in football (soccer), quadrennial
+                        tournament of men's
+                        national teams that determines
+                        the sport's world champion. It is likely the most popular sporting event in the world,
+                        drawing
+                        billions of television
+                        viewers every tournament.</p>
+
                     <div class="button">
                         <button>
                             <a href="#">
@@ -105,7 +106,7 @@
 
                         </div>
                     </div>
-                    <div class="match-flag-part">
+                    <div class="match-flag-part view">
                         <div class="flag-banner">
                             <div class="flag-match">
                                 <img src="assets/Flag.png" alt="">
@@ -118,7 +119,7 @@
                             <p class="time">April 01, 2023, 1.00 AM</p>
                         </div>
                     </div>
-                    <div class="match-flag-part">
+                    <div class="match-flag-part view">
                         <div class="flag-banner">
                             <div class="flag-match">
                                 <img src="assets/Flag.png" alt="">
@@ -142,6 +143,13 @@
             </section>
         </main>
 
+    </div>
+    <div id="va">
+        <button class="watch views">
+            <a href="#">
+                <p>View ALL</i></p>
+            </a>
+        </button>
     </div>
 
 </body>
