--- a/upcomming/upcomming.html
+++ b/upcomming/upcomming.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c5f7dd9af0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="upcomming.css">
-    <title>World Cup</title>
+    <title>Upcoming Match</title>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
         <main>
             <div class="section2">
                 <div class="manu">
-                    <div class="manu-section"><a href="upcomming/upcomming.html">Upcoming Match</a></div>
+                    <div class="manu-section"><a href= "upcomming/upcomming.html" target="_blank">Upcoming Match</a></div>
                     <div class="manu-section"><a href="#">All Group</a></div>
                     <div class="manu-section color"><a href="#">Blog</a></div>
                 </div>
