--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <main>
             <div class="section2">
                 <div class="manu">
-                    <div class="manu-section"><a href="upcomming/upcomming.html">Upcoming Match</a></div>
+                    <div class="manu-section"><a href="upcomming/upcomming.html" target="blank">Upcoming Match</a></div>
                     <div class="manu-section"><a href="#">All Group</a></div>
                     <div class="manu-section color"><a href="#">Blog</a></div>
                 </div>
